sumo/tests/traci/ChangeLane/InvalidLaneId/errors.traci
Answered with error to command 19: No lane existing with given id on the current road
Error while receiving command: tcpip::Socket::receive() @ recv: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
